# pyinsight

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: async_demo.py  basic_demo.py  nested_demo.py
src/pyinsight/: __init__.py  cli.py  config.py  console.py  decorators.py  events.py  exporters.py  recorder.py  reporting.py  runtime.py  spans.py  utils.py
tests/: test_async_trace.py  test_cli.py  test_console.py  test_slow.py  test_span.py  test_trace.py
