[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyinsight"
version = "0.1.3"
description = "Lightweight runtime tracing toolkit for Python applications and AI workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "pyinsight contributors" }
]
keywords = ["tracing", "profiling", "observability", "instrumentation", "async"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ncholis/pyinsight"
Repository = "https://github.com/ncholis/pyinsight"
Issues = "https://github.com/ncholis/pyinsight/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[project.scripts]
pyinsight = "pyinsight.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest_tmp_run"
